[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {version = "0.29.1", feature = ["wgpu"]}
catppuccin-egui = { version = "5.3.0", default-features = false, features = ["egui29"] }
eframe = {version = "0.29.1", default-features = false, features = ["wgpu", "persistence"]}
egui-wgpu = "0.29.1"
egui_tiles = "0.10.1"
log = { version = "0.4.22", features = ["std"] }
env_logger = "0.11.5"
bytemuck = {version = "1.18.0", feature = ["derive"]}
single_value_channel = "1.2.2"

glam = "0.29.0"
vdb-rs = "0.6.0"
half = "2.4.1"
rfd = "0.15.2"
tracing-subscriber = "0.3.19"

# [features]
# default = ["wgpu"]
